Make sure we open jdk.internal.misc