@@ -120,6 +120,7 @@
           <argLine>--add-opens java.base/java.io=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                         --add-opens java.base/sun.nio.fs=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
